<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="12dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_acc_default"
            android:textSize="13sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/txtHr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hr_default"
            android:textSize="13sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/txtPpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ppg_default"
            android:textSize="11sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/txtSpO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_spo2_default"
            android:textSize="13sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/txtSkinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_skin_temp_default"
            android:textSize="13sp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/btnStartService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_service"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveCsvClicked"
            android:text="@string/btn_save_csv"/>

    </LinearLayout>
</ScrollView>
